--- a/styles/style.css
+++ b/styles/style.css
@@ -141,13 +141,13 @@ span {
 }
 
 .home-content p {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 500;
     max-width: 1000px;
 
 }
 
-.social-icons a{
+.social-icons a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -188,6 +188,7 @@ span {
     transform: scale(1.05);
     box-shadow: 0 0 50px var(--main-color);
 }
+
 /*o problema começa aqui, inves de digitar ele ta so piscando*/
 .text-animation {
     font-size: 34px;
@@ -196,7 +197,7 @@ span {
 
 .text-animation span {
     position: relative;
-    
+
 }
 
 .text-animation span::before {
@@ -231,7 +232,7 @@ span {
 
     21%,
     40% {
-        content: "Estudante";
+        content: "Computeira";
     }
 
     41%,
@@ -246,11 +247,12 @@ span {
 
     81%,
     100% {
-        content: "Linda";
+        content: "Back-End Developer";
     }
 }
 
 @keyframes typing {
+
     10%,
     15%,
     30%,
@@ -260,9 +262,10 @@ span {
     70%,
     75%,
     90%,
-    95%{
+    95% {
         width: 0;
     }
+
     5%,
     20%,
     25%,
@@ -275,22 +278,26 @@ span {
         width: calc(100%+8px);
     }
 }
-.about{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10rem;
-  background: var(--secund-bg-color);
-  color: var(--text-color);  
+
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10rem;
+    background: var(--secund-bg-color);
+    color: var(--text-color);
 }
-.about h2 span{
+
+.about h2 span {
     color: var(--main-color);
     text-shadow: 0 0 50px var(--main-color);
 }
-.about-img{
+
+.about-img {
     border-radius: 50%;
 }
-.about-img img{
+
+.about-img img {
     position: relative;
     width: 32vw;
     border-radius: 50%;
@@ -299,26 +306,32 @@ span {
     cursor: pointer;
     transition: 0.4s ease-in-out;
 }
-.about-img img:hover{
+
+.about-img img:hover {
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color),
-                0 0 100px var(--main-color);
+        0 0 50px var(--main-color),
+        0 0 100px var(--main-color);
 }
-.heading{
+
+.heading {
     text-align: center;
     font-size: 8rem;
 }
-.about-content h2{
+
+.about-content h2 {
     text-align: left;
     line-height: 1.5;
 }
-.about-content h3{
+
+.about-content h3 {
     font-size: 2.6rem;
 }
-.about-content p{
-    font-size: 1.6rem;
+
+.about-content p {
+    font-size: 2rem;
     margin: 2rem 0 3rem;
 }
+
 .about-content.text-animation {
     font-size: 34px;
     font-weight: 600;
@@ -340,13 +353,338 @@ span {
     right: -8px;
     animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     width: 15px;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background-color: var(--bg-color);
     width: 50px;
+}
+
+.habilidades {
+    padding: 150px 200px;
+    text-align: center;
+}
+
+.habilidades-container {
+    display: flex;
+    justify-content: center;
+}
+
+.habilidades-box {
+    max-width: 800px;
+    width: 100%;
+}
+
+.habilidades-info {
+    margin-top: 30px;
+}
+
+.habilidades-info h4 {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.habilidades-info h5 {
+    font-size: 18px;
+    margin: 25px 0;
+    color: var(--main-color);
+}
+
+.projetos {
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+
+.projetos-box {
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.projetos .heading {
+    margin-bottom: 5rem;
+}
+
+.projetos-box img {
+    width: 15rem;
+    border-radius: 50%;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+}
+
+.projetos-item {
+    min-height: 550px;
+    max-width: 450px;
+    background: rgba(0, 0, 0, 7);
+    backdrop-filter: blur(20px);
+    border: 3px solid rgba(238, 238, 238, 0.2);
+    border-radius: 2rem;
+    margin: 0 2rem;
+    padding: 30px 60px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1.5rem;
+    color: white;
+    transition: 0.4s ease-in-out;
+}
+
+.projetos-item:hover {
+    border: 3px solid var(--main-color);
+    transform: translateY(-10px)scale(1.03);
+}
+
+.projetos-item h2 {
+    font-size: 2.8rem;
+}
+
+.projetos-item p {
+    font-size: 1.3rem;
+}
+
+#heart {
+    color: red;
+    font-size: 2rem;
+}
+
+.contatos {
+    background-color: var(--bg-color);
+}
+
+.contatos h2 {
+    margin-bottom: 3rem;
+    color: white;
+}
+
+.contatos form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contatos form .input-box {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contatos form .input-box input,
+.contatos form textarea {
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--text-color);
+    background-color: var(--bg-color);
+    border-radius: 0.88rem;
+    border: 2px solid var(--main-color);
+    margin: 1rem 0;
+    resize: none;
+}
+
+.contatos form .bnt {
+    margin-top: 2rem;
+}
+
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding: 40px 0;
+    background-color: var(--main-color);
+}
+
+.footer .social {
+    text-align: center;
+    padding-bottom: 25px;
+    color: white;
+}
+
+.footer .social a {
+    font-size: 25px;
+    color: white;
+    border: 2px solid white;
+    width: 42px;
+    height: 42px;
+    line-height: 42px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 10px;
+    transition: 0.3s ease-in-out;
+}
+
+.footer .social a:hover {
+    transform: scale(1.2)translateY(-10px);
+    background-color: white;
+    color: var(--main-color);
+}
+
+.footer ul {
+    margin-top: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.footer ul li a {
+    color: white;
+    border-bottom: 3px solid transparent;
+    transition: 0.3s ease-in-out;
+}
+
+.footer ul li a:hover {
+    border-bottom: 3px solid white;
+}
+
+.footer ul li {
+    display: inline;
+    padding: 0 15px;
+}
+
+.footer .copyrigth {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 16px;
+    color: white;
+}
+
+
+@media(max-width:1285px) {
+    html {
+        font-size: 55%;
+    }
+
+    .habilidades-container {
+        padding-bottom: 7rem;
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0 5rem;
+    }
+}
+
+@media(max-width:991px) {
+    header {
+        padding: 2rem 3%;
+    }
+
+    section {
+        padding: 10rem 3% 2rem;
+    }
+
+    .habilidades {
+        padding-bottom: 7rem;
+    }
+
+    .projetos .wrapper {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .footer {
+        padding: 2rem 3%;
+    }
+
+}
+
+@media (max-width:895px) {
+    #menu-icon {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 50%;
+        padding: 1rem 3%;
+        background: rgb(0, 0, 0, 0.9);
+        backdrop-filter: blur(20px);
+        border-bottom-left-radius: 2rem;
+        border-left: 2pxx solid var(--main-color);
+        border-bottom: 2px sold var(--main-color);
+        display: none;
+    }
+
+    .navbar.active {
+        display: block;
+    }
+
+    .navbar a {
+        display: block;
+        font-size: 2rem;
+        margin: 3rem 0;
+        color: white;
+    }
+
+    .home {
+        flex-direction: column;
+        margin: 5rem 4rem;
+    }
+
+    .home-content h3 {
+        font-size: 2.6rem;
+    }
+
+    .home-content h1 {
+        font-size: 8rem;
+        margin-top: 3rem;
+    }
+
+    .home-content p {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    .home-img img {
+        width: 56vw;
+        margin-top: -2rem;
+    }
+
+    .about {
+        flex-direction: column-reverse;
+    }
+
+    .about-content {
+        margin: 0 2rem 4rem;
+    }
+
+    .about-img {
+        width: 52vw;
+        margin-top: 1rem;
+        margin-bottom: 3rem;
+    }
+
+    .habilidades {
+        padding: 10rem 3%;
+    }
+
+    .habilidades-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 4rem;
+    }
+
+    .habilidades-box {
+        max-width: 600px;
+        width: 100%;
+    }
+
+
 }
