--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@
     --bg-color: #080808;
     --secund-bg-color: #101010;
     --text-color: white;
-    --main-color: #ca0bf5;
+    --main-color: #FF008E;
 }
 
 html {
